--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="./assets/main.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" href="/assets/images/todoapp_logo.svg">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
   </head>
   <body class="grad-ocean d-flex flex-column">
-    <header class="full-width">
+    <header class="full-width mt-1">
       <h1 class="header-todo text-white text-center text-shadow-22">To <br />Do</h1>
     </header>
     <main class="main-class d-flex just-center flex-column">
-      <div class="container d-flex just-center">
+      <div class="container d-flex just-center flex-column">
         <div class="d-flex flex-column content-box box-shadow-13">
           <div class="d-flex input-container just-center">
             <form action="" class="todo-input-form d-flex just-center">
@@ -27,16 +25,16 @@
           </form>
           </div>
           <div class="todo-list-container">
-            <h3 class="description-text text-center text-white">Just write your TO-DO and click on the ADD button</h2>
+            <h3 class="description-text text-center text-white">Just write your TO-DO and click on the ADD button</h3>
             <ul class="todo-list">
             </ul>
           </div>
         </div>
-      </div>
-      <div class="bottom-controls d-flex flex-row">
-        <div class="remove-all-button text-white mt-1 mr-1 button button-red" id="remove-all-button">Remove All</div>
-      </div>
+          <div class="bottom-controls d-flex mt-1 flex-row">
+              <div class="remove-all-button text-white button button-red" id="remove-all-button">Remove All</div>
+          </div>
 
+      </div>
     </main>
     <script src="./assets/main.js"></script>
   </body>
